# not-a-space-invaders

./: CMakeLists.txt  main.cpp
Resources/: calcs.numbers
Resources/shaders/: fs.glsl  vs.glsl
include/glm/: CMakeLists.txt  common.hpp  detail  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  gtc  gtx  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  simd  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
lib/: libglfw.3.3.dylib
lib/OpenGL.framework/Versions/A/: OpenGL
lib/OpenGL.framework/Versions/A/Libraries/: CVMCompiler  CVMServer  DumpGPURestart  ReportGPURestart  libCVMSPluginSupport.dylib  libCoreFSCache.dylib  libCoreVMClient.dylib  libGFXShared.dylib  libGL.dylib  libGLImage.dylib  libGLU.dylib  libGLVMPlugin.dylib
lib/OpenGL.framework/Versions/A/Libraries/3425AMD/: CVMCompiler  libCoreVMClient.mono.dylib
lib/OpenGL.framework/Versions/A/Libraries/3600/: CVMCompiler  libCoreVMClient.mono.dylib
lib/OpenGL.framework/Versions/A/Libraries/Legacy/: CVMCompiler  libCoreVMClient.mono.dylib
lib/OpenGL.framework/Versions/A/Resources/: GLByteCodes.i386.bc  GLByteCodes.x86_64.bc  Info.plist  version.plist
lib/OpenGL.framework/Versions/A/Resources/BridgeSupport/: OpenGL.bridgesupport
lib/OpenGL.framework/Versions/A/_CodeSignature/: CodeResources
utils/: CMakeLists.txt  Collisions.cpp  Collisions.h  GameObject.cpp  GameObject.hpp  Includes.h  Layer.cpp  Layer.hpp  gl_utils.cpp  gl_utils.h
(+2 files in other folders)
